Contract Configurator 1.2.5
- Fixed NullReferenceException in CompleteContractRequirement (thanks severedsolo).
- ImpactSeismometer and ImpactSpectrometer only available for airless bodies (thanks tomf).
- Asteroid sample experiments are now classified as difficult (thanks tomf).

Contract Configurator 1.2.4
- Support for DMagic's Orbital Science and tomf's Impact! in science stuff (Field Research Contract Pack).
- Fixed exception loading ContractVesselTracker (thanks GFBones).
- Fixed exception in BiomeTracker when generating some Field Research contracts (thanks DaniDE).
- Fixed contract failure when renaming vessels in RemoteTech contracts (thanks Svannon).

Contract Configurator 1.2.3
- Added Waypoint.Location() expression method.
- Added Location.Biome() expression method.
- Added RandomKerbalName() global expression function.
- Added experienceTrait to SpawnPassenger.
- Fixed some issues with recovering from tracking station in CollectScience.
- Fixed null reference issue in dead contract types (thanks DMagic).
- Fixed issues with biome detection for KSC biomes in CollectScience.
- More fixes related to contracts failing unique check in SCANsat Lite (thanks nobodyhasthis).
- Minor bug fixes.

Contract Configurator 1.2.2
- New UnlockTech behaviour (thanks Klefenz).
- Added support for specifying science by subject in CollectScience.
- Added CelestialBody.SemiMajorAxis() expression method.
- Fixes to VesselDestroyed (thanks tito13kfm).
- Fixes to contracts failing unexpectedly (thanks Recon777).  Affects RemoteTech Contract Pack.
- Fixed issues with CollectScience location (thanks severedsolo).
- Fixed issue with ContractGroup max checks not working correctly for parent contract groups.
- Fixed CollectScience to display correct experiment name.
- Minor bug fixes.

Contract Configurator 1.2.1
- CompleteContract requirement now checks on active contracts too.